Product/kube-configs/network-policies/new-product-service-allow-internal-lb.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: new-product-service-allow-internal-lb
  namespace: product
spec:
  podSelector:
    matchLabels:
      app: new-product-service-internal
  ingress:
  - ports:
    - port: 80
    - port: 443
  - from: 
    - ipBlock:
        cidr: xxx.xxx.xxx.xxx/32 #privage IP of the internal load balancer
