Product/kube-configs/network-policies/new-product-service-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: product-deny-all-ingress
  namespace: product
spec:
  podSelector: {}
  ingress: []
